--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -104,5 +104,6 @@ header .nav-btn {
 
     nav a {
         font-size: 1.5rem;
+        margin-left: 0;
     }
 }
